--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,24 @@ services:
       - zsh
     volumes_from:
       - app
+    volumes:
+      - ${SHELL_SSH_VOLUME_MAP:-~/.ssh:/home/elixir/.ssh}
+      - ${SHELL_GIT_CONFIG_VOLUME_MAP:-~/.gitconfig:/home/elixir/.gitconfig}
+
+  iex:
+    build: ./docker
+    image: ${IEX_IMAGE:-exadra37/elixir:1.3.4}
+    env_file: .env
+    environment:
+      - MIX_ENV=dev
+    command:
+      - iex
+    volumes_from:
+      - app
 
   web:
-    image: exadra37/elixir
+    build: ./docker/build/web
+    image: ${WEB_IMAGE:-exadra37/phoenix:1.3.0}
     env_file: .env
     environment:
       - MIX_ENV=dev # That's the environment mode, you know
